2001-08-09  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/vfscanf.c: Fix reading of wide chars and strings if
	not COMPILE_WSCANF.

	* libio/vswprintf.c (_IO_vswprintf): Fix return value handling
	which is different from snprintf.
	* libio/tst_swprintf.c: Add tests for too small output buffer.

	* stdio-common/vfscanf.c: Fix handling of %[] for COMPILE_WSCANF.
	* libio/Makefile (tests): Add tst-swscanf.
	* libio/tst-swscanf.c: New file.

2001-08-09  Jakub Jelinek  <jakub@redhat.com>

	* posix/globtest.sh: Robustify tilde tests.

2001-08-09  Andreas Jaeger  <aj@suse.de>

	* locale/programs/ld-ctype.c (DEFAULT): Fix expression.
	(EMPTY): New.
	(wctype_table_finalize): Use it.
	(find_idx): Likewise.
	(wctype_table_get): Likewise.

	* configure.in: Add check for GCC 3.x.

2001-08-09  Ulrich Drepper  <drepper@redhat.com>

	* libio/wfileops.c (_IO_wfile_seekoff): Don't even try to handle
	seeking with backup buffer present.
	Correct determining of internal buffer position.
	Reset also wide buffers if we reset the internal buffers.
	* libio/iofwide.c (_IO_fwide): Always determine file offset for wide
	streams.
	* libio/ioseekoff.c: Catch one unimplemented case.
	* libio/ftello.c: Don't abort if the wide stream has backup buffer.
	* libio/ftello64.c: Likewise.
	* libio/iofgetpos.c: Likewise.
	* libio/iofgetpos64.c: Likewise.
	* libio/ftell.c: Likewise.
	* libio/Makefile (tests): Add tst-ungetwc2.
	* libio/tst-ungetwc2.c: New file.

2001-08-08  Ulrich Drepper  <drepper@redhat.com>

	* locale/elem-hash.h (elem_hash): Correct stupid mistake and
	create real hash values now.
	Patch by Isamu Hasegawa <isamu@yamato.ibm.com>.

	* libio/iofgetpos.c (_IO_new_fgetpos): Correct a few problems in
	the handling of wide streams.

	* libio/ioungetwc.c (ungetwc): Orient stream first.
	* libio/Makefile (tests): Add tst-ungetwc1.
	* libio/tst-ungetwc1.c: New file.

	* libio/wfileops.c (_IO_wfile_underflow): Remove incorrect test
	for possible conversion using __codecvt_do_in.